Modernised - Bugfix .ui.menu flexwrap

--- a/custom-css/Modernised/theme.css
+++ b/custom-css/Modernised/theme.css
@@ -1472,6 +1472,7 @@ img[src^='//img.subeta.net/icons/lock'] {
         }
 
         &.secondary.pointing {
+            flex-wrap: wrap;
             margin-top: 0;
             margin-bottom: 1rem;
             padding: var(--navbar-padding);
